# chatbot-backend-try2

./: .gitignore  Dockerfile  backend_alignment_report.md  check_db.py  config.py  geministff,py  hi.txt  main.py  poc-script-genai-47e9869b446c.json  pyproject.toml  pyproject.toml   requirements.txt  walkthrough-RAG.md
api/: index.py
ingest/: file_parser.py  rag_processor.py
memory/: __init__.py  context_assembler.py  conversation_manager.py  log_store.py  summarizer.py  vector_memory.py
pipeline/: cache.py  contracts.py  creative_review.py  creative_review_pipeline.py  few_shot.py  fine_tune.py  llm_client.py  orchestrator.py  queue.py  semantic_distillation.py
pipeline/stages/: base.py  creative_summary.py  critic.py  essence_generator.py  interpretation_generator.py  niche_research.py  rag_retrieval.py  visuals.py  voice_over.py
supabase/migrations/: conversation_memory.sql  rag_init.sql
tts/: tts.py
