[project]
name = "script-backend"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
  # --- Web framework ---
  "fastapi==0.124.4",
  "uvicorn==0.38.0",

  # --- Validation ---
  "pydantic>=2.0",

  # --- File handling ---
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.2",
  "python-pptx>=0.6.23",

  # --- Vertex AI ---
  "google-cloud-aiplatform>=1.47.0",

  # --- Required for UploadFile/Form ---
  "python-multipart>=0.0.9"
]